reiling_dijkstra_serial.err
dijkstra_serial.c: In function ‘minDistance’:
dijkstra_serial.c:21:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int vertex = 0; vertex < num_verticies; vertex++)
     ^
dijkstra_serial.c:21:5: note: use option -std=c99 or -std=gnu99 to compile your code
dijkstra_serial.c: In function ‘printSolution’:
dijkstra_serial.c:32:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int i = 0; i < num_verticies; i++)
     ^
dijkstra_serial.c: In function ‘generateGraph’:
dijkstra_serial.c:44:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int i = 0; i < num_verticies; i++) {
     ^
dijkstra_serial.c:53:14: error: redefinition of ‘i’
     for (int i = 0; i < num_verticies; i++) {
              ^
dijkstra_serial.c:44:14: note: previous definition of ‘i’ was here
     for (int i = 0; i < num_verticies; i++) {
              ^
dijkstra_serial.c:53:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int i = 0; i < num_verticies; i++) {
     ^
dijkstra_serial.c:54:9: error: ‘for’ loop initial declarations are only allowed in C99 mode
         for (int j = 0; j < num_verticies; j++) {
         ^
dijkstra_serial.c: In function ‘main’:
dijkstra_serial.c:105:4: error: ‘for’ loop initial declarations are only allowed in C99 mode
    for (int vertex = 0; vertex < num_verticies; vertex++) {
    ^
dijkstra_serial.c:112:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int source_index = 0; source_index < num_verticies; source_index++){
     ^
dijkstra_serial.c:120:9: error: ‘for’ loop initial declarations are only allowed in C99 mode
         for (int i = 0; i < num_verticies; i++) {
         ^
dijkstra_serial.c:131:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int vert_indx = 0; vert_indx < num_verticies - 1; vert_indx++) {
     ^
dijkstra_serial.c:138:9: error: ‘for’ loop initial declarations are only allowed in C99 mode
         for (int adj_vertex = 0; adj_vertex < num_verticies; adj_vertex++)
         ^
